objects/PrelogDataMirror__c.object
<CustomObject>
    <fields>
        <fullName>AdvertiserProduct__c</fullName>
        <label>Advertiser/Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirDate__c</fullName>
        <label>Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <description>Stamp the batch Id on a failed mirror.</description>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BreakCode__c</fullName>
        <label>Break Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Type__c</fullName>
        <label>Commercial Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Home__c</fullName>
        <label>Current Home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Prelog Data Mirrors</relationshipLabel>
        <relationshipName>Prelog_Data_Mirrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorReason__c</fullName>
        <label>Error Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Length not found</fullName>
                </value>
                <value>
                    <fullName>Air Date does not match</fullName>
                </value>
                <value>
                    <fullName>Air Time does not match</fullName>
                </value>
                <value>
                    <fullName>Rate not found</fullName>
                </value>
                <value>
                    <fullName>Network Deal number not found</fullName>
                </value>
                <value>
                    <fullName>No Network Deal number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>800#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialDescription__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkDealNumber__c</fullName>
        <label>Network Deal Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderProductDescription__c</fullName>
        <label>Order Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrelogData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prelog Data</label>
        <referenceTo>PrelogData__c</referenceTo>
        <relationshipLabel>Prelog Data Mirrors</relationshipLabel>
        <relationshipName>Prelog_Data_Mirrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Process Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduleAdID__c</fullName>
        <label>Schedule Ad-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleLength__c</fullName>
        <label>Schedule Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleTime__c</fullName>
        <label>Schedule Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>Prelog Data Mirrors</relationshipLabel>
        <relationshipName>Prelog_Data_Mirrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScribeId__c</fullName>
        <label>ScribeId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEST_Scribe_GUID__c</fullName>
        <label>TEST Scribe GUID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TimePeriod__c</fullName>
        <label>Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>CASE( 
MOD( AirDate__c - DATE(1900, 1, 7), 7), 
0, AirDate__c - 6, 
1, AirDate__c , 
2, AirDate__c -1, 
3, AirDate__c - 2, 
4,AirDate__c - 3, 
5, AirDate__c - 4, 
6, AirDate__c - 5, DATE(2001, 1, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <label>Prelog Data Mirror</label>
    <listViews>
        <fullName>Antenna</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>Rate__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Network__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>AntennaTV,AntennaTV - Local</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/28/2018</value>
        </filters>
        <label>Antenna</label>
    </listViews>
    <listViews>
        <fullName>BounceTV</fullName>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>Commercial_Type__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>Rate__c</columns>
        <columns>AirDate__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Network__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>BounceTV,BB</value>
        </filters>
        <filters>
            <field>AirDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/28/2018</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>BounceTV</label>
    </listViews>
    <listViews>
        <fullName>CBS_Sports</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>ScheduleAdID__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>AirDate__c</columns>
        <columns>Rate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>Network__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>Agency__c</columns>
        <columns>TimePeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>CBS Sports</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/28/2018</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>CBS Sports</label>
    </listViews>
    <listViews>
        <fullName>Escape</fullName>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Commercial_Type__c</columns>
        <columns>Agency__c</columns>
        <columns>Rate__c</columns>
        <columns>AirDate__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Version__c</columns>
        <columns>Network__c</columns>
        <columns>Problem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>Escape</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/6/2019</value>
        </filters>
        <label>Escape</label>
    </listViews>
    <listViews>
        <fullName>Escape1</fullName>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>Rate__c</columns>
        <columns>AirDate__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Version__c</columns>
        <columns>Network__c</columns>
        <columns>Problem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>Escape</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/6/2017</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Escape</label>
    </listViews>
    <listViews>
        <fullName>Failed_Prelog_Mirror</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Network__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Batch_Id__c</columns>
        <columns>ErrorReason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Prelog Mirrors</label>
    </listViews>
    <listViews>
        <fullName>GritTV2</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>Rate__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>ErrorReason__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Network__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>GritTV</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>GritTV</label>
    </listViews>
    <listViews>
        <fullName>Justice_Network_V11</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>Agency__c</columns>
        <columns>AirDate__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>Rate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>ScheduleAdID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>Justice Network</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/28/2018</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <filters>
            <field>TimePeriod__c</field>
            <operation>equals</operation>
        </filters>
        <label>Justice Network V2</label>
    </listViews>
    <listViews>
        <fullName>Laff</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>AirDate__c</columns>
        <columns>Rate__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Network__c</columns>
        <columns>Problem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>Laff</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/6/2019</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Laff</label>
    </listViews>
    <listViews>
        <fullName>Laff1</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>AirDate__c</columns>
        <columns>Rate__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Network__c</columns>
        <columns>Problem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>Laff</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/28/2018</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Laff</label>
    </listViews>
    <listViews>
        <fullName>MGM_HD1</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>Agency__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>AirDate__c</columns>
        <columns>Rate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>Network__c</columns>
        <columns>ScheduleAdID__c</columns>
        <columns>TimePeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>MGM HD</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>6/4/2018</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>MGM HD</label>
    </listViews>
    <listViews>
        <fullName>MLB_Network</fullName>
        <columns>Version__c</columns>
        <columns>Schedule__c</columns>
        <columns>PrelogData__c</columns>
        <columns>NAME</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>Rate__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>Agency__c</columns>
        <columns>Network__c</columns>
        <columns>ScheduleAdID__c</columns>
        <columns>TimePeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>MLB Network</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/28/2018</value>
        </filters>
        <label>MLB Network</label>
    </listViews>
    <listViews>
        <fullName>Mav_TV</fullName>
        <columns>Version__c</columns>
        <columns>PrelogData__c</columns>
        <columns>Schedule__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Rate__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>ScheduleAdID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>MAV TV</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>6/4/2018</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Mav TV</label>
    </listViews>
    <listViews>
        <fullName>NHL</fullName>
        <columns>Schedule__c</columns>
        <columns>PrelogData__c</columns>
        <columns>AirDate__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>Rate__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>Network__c</columns>
        <columns>TimePeriod__c</columns>
        <columns>Version__c</columns>
        <columns>Problem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>NHL Network,NHL Network - Local</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/14/2018</value>
        </filters>
        <label>NHL</label>
    </listViews>
    <listViews>
        <fullName>NHL_Network</fullName>
        <columns>Version__c</columns>
        <columns>Schedule__c</columns>
        <columns>PrelogData__c</columns>
        <columns>NAME</columns>
        <columns>NetworkDealNumber__c</columns>
        <columns>ScheduleLength__c</columns>
        <columns>Rate__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>OrderProductDescription__c</columns>
        <columns>Agency__c</columns>
        <columns>Network__c</columns>
        <columns>ScheduleAdID__c</columns>
        <columns>TimePeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>NHL</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/28/2018</value>
        </filters>
        <label>NHL Network</label>
    </listViews>
    <nameField>
        <displayFormat>Prelog-{0000000}</displayFormat>
        <label>Prelog Data Mirror Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prelog Data Mirrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prelog_Missing_Fields</fullName>
        <active>true</active>
        <description>Flags if missing one of the following fields: Version, Air Date, Air Time, Network, Length, Network Deal Number</description>
        <errorConditionFormula>OR( ISBLANK( Version__c ), ISBLANK(  NetworkDealNumber__c ), ISBLANK( AirDate__c ), ISBLANK ( ScheduleTime__c ), ISBLANK( Network__c ), ISBLANK( ScheduleLength__c ))</errorConditionFormula>
        <errorMessage>You are missing one of the necessary fields for Prelog Data Mirror: Version, Air Date, Air Time, Network, Network Deal Number or Length.  Double check your upload file.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weeks_Must_Match</fullName>
        <active>true</active>
        <errorConditionFormula>if( Week__c  &lt;&gt;  Schedule__r.Week__c , True, False)</errorConditionFormula>
        <errorDisplayField>Schedule__c</errorDisplayField>
        <errorMessage>The schedule you have entered matches to a different week than this record. Please find a schedule in the correct week.</errorMessage>
    </validationRules>
</CustomObject>